--- a/Prediction of L.ipynb
+++ b/Prediction of L.ipynb
@@ -259,248 +259,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 37ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 44ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 35ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n"
+      "1/1 [==============================] - 0s 21ms/step\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "[631.4185]\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "[679.8865]\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "[589.3776]\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "[645.80023]\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "[817.4906]\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n"
+     "ename": "NameError",
+     "evalue": "name 'thresold' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 45\u001b[0m\n\u001b[0;32m     43\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     44\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOpenCV Feed\u001b[39m\u001b[38;5;124m'\u001b[39m, image)\n\u001b[1;32m---> 45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m res\u001b[38;5;241m/\u001b[39mscore \u001b[38;5;241m>\u001b[39m thresold\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m     46\u001b[0m         \u001b[38;5;28mprint\u001b[39m(res)\n\u001b[0;32m     47\u001b[0m \u001b[38;5;66;03m# Break gracefully\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'thresold' is not defined"
      ]
     }
    ],
@@ -508,6 +285,7 @@
     "# 1. New detection variables\n",
     "sequence = []\n",
     "threshold = 0.9\n",
+    "score = 800\n",
     "\n",
     "pygame.init()\n",
     "pygame.mixer.init()\n",
@@ -539,12 +317,7 @@
     "        \n",
     "        if len(sequence) == 30:\n",
     "            res = model.predict(np.expand_dims(sequence, axis=0))[0]\n",
-    "            # In the last trial run, the model gave > 625 for when the L was correct. So, using trial and error\n",
-    "            # we are using 625 as the number here.\n",
-    "            # TODO figure out how to ask the model for a probability instead - when there is a single action.\n",
-    "            # The model (as previously written) used to pick one of the three actions... we don't want that here.\n",
-    "            # we have only one action. So this needs to be further refined. But for now, for a single action, this works.\n",
-    "            if res/625 > threshold:\n",
+    "            if res/score > threshold:\n",
     "                print(res)\n",
     "                pose_achieved.play()\n",
     "                # Show to screen\n",
@@ -552,6 +325,9 @@
     "                # Show the matched pose for 10 seconds and break out.\n",
     "                cv2.waitKey(10000)\n",
     "                break\n",
+    "            cv2.imshow('OpenCV Feed', image)\n",
+    "            if res/score > threshold/2:\n",
+    "                print(res)\n",
     "        # Break gracefully\n",
     "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
     "            break\n",
