--- a/Train and Test Poses.ipynb
+++ b/Train and Test Poses.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "!pip install tensorflow==2.12.0 opencv-python mediapipe scikit-learn matplotlib pygame"
+    "%pip install tensorflow==2.12.0 opencv-python mediapipe scikit-learn matplotlib pygame"
    ]
   },
   {
